--- a/Onsalefaneus.Prism/Onsalefaneus.Prism/Views/ProductDetailPage.xaml
+++ b/Onsalefaneus.Prism/Onsalefaneus.Prism/Views/ProductDetailPage.xaml
@@ -8,6 +8,8 @@
              xmlns:syncfusion="clr-namespace:Syncfusion.SfRotator.XForms;assembly=Syncfusion.SfRotator.XForms"
              xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms" 
              x:Class="Onsalefaneus.Prism.Views.ProductDetailPage"
+             xmlns:i18n="clr-namespace:Onsalefaneus.Prism.Helpers"
+             BackgroundColor="{StaticResource ColorBackground}"
              Title="{Binding Title}">
 
     <StackLayout Padding="5">
@@ -50,35 +52,35 @@
                     <Label Grid.Row="0"
                            Grid.Column="0"
                            FontAttributes="Bold"
-                           Text="Name"/>
+                           Text="{i18n:Translate Name}"/>
                     <Label Grid.Row="0"
                            Grid.Column="1"
                            Text="{Binding Product.Name}"/>
                     <Label Grid.Row="1"
                            Grid.Column="0"
                            FontAttributes="Bold"
-                           Text="Description"/>
+                           Text="{i18n:Translate Description}"/>
                     <Label Grid.Row="1"
                            Grid.Column="1"
                            Text="{Binding Product.Description}"/>
                     <Label Grid.Row="2"
                            Grid.Column="0"
                            FontAttributes="Bold"
-                           Text="Price"/>
+                           Text="{i18n:Translate Price}"/>
                     <Label Grid.Row="2"
                            Grid.Column="1"
                            Text="{Binding Product.Price, StringFormat='{0:C2}'}"/>
                     <Label Grid.Row="3"
                            Grid.Column="0"
                            FontAttributes="Bold"
-                           Text="Category"/>
+                           Text="{i18n:Translate Category}"/>
                     <Label Grid.Row="3"
                            Grid.Column="1"
                            Text="{Binding Product.Category.Name}"/>
                     <Label Grid.Row="4"
                            Grid.Column="0"
                            FontAttributes="Bold"
-                           Text="Is Starred"
+                           Text="{i18n:Translate IsStarred}"
                            VerticalOptions="Center"/>
                     <CheckBox Grid.Row="4"
                               Grid.Column="1"
@@ -88,12 +90,10 @@
                 </Grid>
             </StackLayout>
         </ScrollView>
-        <Button BackgroundColor="Navy"
-                Command="{Binding AddToCartBinding}" 
-                CornerRadius="10"
-                Text="Add to cart"
-                TextColor="White"
-                VerticalOptions="EndAndExpand"/>
+        <Button 
+                Command="{Binding AddToCartBinding}"                 
+                Text="{i18n:Translate AddToCart}"
+                VerticalOptions="FillAndExpand"/>
     </StackLayout>
 
 
