Se avanza en la implementacion de la App

--- a/Onsalefaneus.Prism/Onsalefaneus.Prism/Views/ProductDetailPage.xaml
+++ b/Onsalefaneus.Prism/Onsalefaneus.Prism/Views/ProductDetailPage.xaml
@@ -6,15 +6,34 @@
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              ios:Page.UseSafeArea="true"
              xmlns:syncfusion="clr-namespace:Syncfusion.SfRotator.XForms;assembly=Syncfusion.SfRotator.XForms"
-             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms" 
+             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"  
+           	 xmlns:i18n="clr-namespace:Onsalefaneus.Prism.Helpers"
+             xmlns:rating="clr-namespace:Syncfusion.SfRating.XForms;assembly=Syncfusion.SfRating.XForms"
              x:Class="Onsalefaneus.Prism.Views.ProductDetailPage"
-             xmlns:i18n="clr-namespace:Onsalefaneus.Prism.Helpers"
              BackgroundColor="{StaticResource ColorBackground}"
+             IconImageSource="ic_action_card_giftcard"
              Title="{Binding Title}">
 
     <StackLayout Padding="5">
         <ScrollView>
             <StackLayout>
+                <StackLayout HorizontalOptions="Center"
+                             Orientation="Horizontal">
+                    <Label Text="{i18n:Translate Qualification}"
+                            VerticalOptions="Center"/>
+                    <Label FontAttributes="Bold"
+                            FontSize="Large"
+                            Text="{Binding Product.Qualification, StringFormat='{0:N2}'}"/>
+                    <Label Text="{i18n:Translate QualificationNumber}"
+                            VerticalOptions="Center"/>
+                    <Label FontAttributes="Bold"
+                            FontSize="Large"
+                            Text="{Binding Product.ProductQualifications, StringFormat='{0:N0}'}"/>
+                </StackLayout>
+                <rating:SfRating IsEnabled="False"
+                                 HorizontalOptions="Center"
+                                 Precision="Exact"
+                                 Value="{Binding Product.Qualification}"/>
                 <syncfusion:SfRotator EnableAutoPlay="True"  
                                       EnableLooping="True"
                                       HeightRequest="300"
@@ -90,11 +109,13 @@
                 </Grid>
             </StackLayout>
         </ScrollView>
-        <Button 
-                Command="{Binding AddToCartBinding}"                 
+        <Button BackgroundColor="Navy"
+                Command="{Binding AddToCartBinding}" 
+                CornerRadius="10"
                 Text="{i18n:Translate AddToCart}"
-                VerticalOptions="FillAndExpand"/>
+                TextColor="White"
+                VerticalOptions="EndAndExpand"/>
     </StackLayout>
 
-
 </ContentPage>
+
